2005-08-19  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR target/23473
	* arm.md (arm_load_pic_register): Change argument to the mask of
	saved registers.  Call thumb_find_work_register if we need a 
	scratch register on Thumb.
	(arm_expand_prologue): Pass empty register set to 
	arm_load_pic_register.
	(thumb_expand_prologue): Pass live_regs_mask directly to
	arm_load_pic_register.
	* arm-protos.h (arm_load_pic_register): Update prototype.

2005-08-19  J"orn Rennecke <joern.rennecke@st.com>

	* sh.c (find_sole_member): New function.
	(sh_gimplify_va_arg_expr): Use it. Allow RECORD_TYPE mode mismatch
	if the record's alignment is larger than the size of its only member.

2005-08-19  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR target/23436
	* arm.c (thumb_legitimize_reload_address): New function.
	* arm-protos.h (thumb_legitimize_reload_address): Add prototype.
	* arm.h (THUMB_LEGITIMIZE_RELOAD_ADDRESS): Call it.

2005-08-19  Paul Woegerer  <paul.woegerer@nsc.com>

	* config/crx/crx.c: Implement crx_decompose_address. Reject
	symbolic displacements since CRX register relative adressing
	mode can't handle unsigned 32-bit values as displacements.
	* config/crx/crx.h: Simplify definitions, remove redundant
	parenthesis and obsolete macros.
	* config/crx/crx.opt: Add new switch for debugging addresses.
	* config/crx/crx-protos.h: Add new declarations for above.

2005-08-19  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/20624
	* gimple-low.c (block_may_fallthru): Handle CLEANUP_POINT_EXPR by
	looking past it.

2005-08-18  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* collect2.c (dup2): Delete.
	* configure.ac: Don't check for dup2.

	* config.in, configure: Regenerate.

2005-08-18  J"orn Rennecke <joern.rennecke@st.com>

	* sh.c (sh_gimplify_va_arg_expr): Loop to substitute a RECORD_TYPE
	record with the type of its only member.

2005-08-18  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.md (ltu<mode>_compare): Convert to